[chromium] Fix issues in visiblePositionForWindowPoint (offscreen points / iframes).
Created attachment 127981 [details] Patch
Comment on attachment 127981 [details] Patch How do we test this?
Comment on attachment 127981 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127981&action=review > Source/WebKit/chromium/ChangeLog:14 > + 1) If the point is off-screen, the visiblePosition is clipped to the screen. > + - The fix is to add HitTestRequest::IgnoreClipping. > + > + 2) The result is incorrect if the point is within an iframe. > + - This is because we are calling convertFromContainingWindow twice: once in windowToContents, > + and then explicitly as well. > + - This patch removes the explicit call to convertFromContainingWindow. We need tests for these two problems. > Source/WebKit/chromium/ChangeLog:16 > + Reviewed by NOBODY (OOPS!). This line should appear before the long description.
Comment on attachment 127981 [details] Patch We really should write tests for this sort of patch. I feel a bit like I'm encouraging bad behavior by approving this patch, but I also want you to encourage you to submit patches to WebKit. On balance, I'm going to r+ this patch, but please include tests with future patches. You should also feel encouraged to upload a followup patch that contains a patch. If you're unsure how to write a test for this issue, I'm happy to help.
Comment on attachment 127981 [details] Patch Clearing flags on attachment: 127981 Committed r123855: <http://trac.webkit.org/changeset/123855>
All reviewed patches have been landed. Closing bug.
Thanks Adam. I meant to come back to this to add tests but hadn't got round to it. I'll add tests for these cases in another patch.
Thanks. I figured it just got lost in the shuffle.