[chromium] Fix issues in visiblePositionForWindowPoint (offscreen points / iframes). https://bugs.webkit.org/show_bug.cgi?id=79117

Fix two issues in WebFrameImpl::visiblePositionForWindowPoint.

1) If the point is off-screen, the visiblePosition is clipped to the screen.
   - The fix is to add HitTestRequest::IgnoreClipping.

2) The result is incorrect if the point is within an iframe.
   - This is because we are calling convertFromContainingWindow twice: once in windowToContents,
     and then explicitly as well.
   - This patch removes the explicit call to convertFromContainingWindow.

Patch by Oli Lan <olilan@chromium.org> on 2012-07-27
Reviewed by Adam Barth.

* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::visiblePositionForWindowPoint):

Canonical link: https://commits.webkit.org/110290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123855 268f45cc-cd09-0410-ab3c-d52691b4dbfc